--- a/buildSrc/src/main/resources/website/src/app/component/search/search.component.html
+++ b/buildSrc/src/main/resources/website/src/app/component/search/search.component.html
@@ -5,7 +5,7 @@
 
 <mat-autocomplete #auto="matAutocomplete">
 	@for (station of searchedStations$ | async; track $index) {
-		<mat-option (click)="stationClicked.emit(station.id)">
+		<mat-option (click)="stationClicked.emit(station.key)">
 			<app-data-list-entry [icons]="station.icons" [title]="[station.name | formatName, '']" [subtitles]="[]" [color]="'#' + station.color" [useLightColor]="false" [clickable]="false"/>
 		</mat-option>
 	}
@@ -13,7 +13,7 @@
 		<mat-divider/>
 	}
 	@for (route of searchedRoutes$ | async; track $index) {
-		<mat-option (click)="routeClicked.emit(route.id)">
+		<mat-option (click)="routeClicked.emit(route.key)">
 			<app-data-list-entry [icons]="route.icons" [title]="[route.name | formatName, route.number | formatName]" [subtitles]="[]" [color]="'#' + route.color" [useLightColor]="false" [clickable]="false"/>
 		</mat-option>
 	}
