--- a/buildSrc/src/main/resources/website/src/app/component/search/search.component.html
+++ b/buildSrc/src/main/resources/website/src/app/component/search/search.component.html
@@ -6,7 +6,7 @@
 <mat-autocomplete #auto="matAutocomplete">
 	@for (station of searchedStations$ | async; track $index) {
 		<mat-option (click)="stationClicked.emit(station.key)">
-			<app-data-list-entry [icons]="station.icons" [title]="[station.name | formatName, '']" [subtitles]="[]" [color]="'#' + station.color" [useLightColor]="false" [clickable]="false"/>
+			<app-data-list-entry [icons]="station.icons" [title]="[station.name | formatName, '']" [subtitles]="[]" [color]="station.color | formatColor" [useLightColor]="false" [clickable]="false"/>
 		</mat-option>
 	}
 	@if (hasStations && hasRoutes) {
@@ -14,7 +14,7 @@
 	}
 	@for (route of searchedRoutes$ | async; track $index) {
 		<mat-option (click)="routeClicked.emit(route.key)">
-			<app-data-list-entry [icons]="route.icons" [title]="[route.name | formatName, route.number | formatName]" [subtitles]="[]" [color]="'#' + route.color" [useLightColor]="false" [clickable]="false"/>
+			<app-data-list-entry [icons]="route.icons" [title]="[route.name | formatName, route.number | formatName]" [subtitles]="[]" [color]="route.color | formatColor" [useLightColor]="false" [clickable]="false"/>
 		</mat-option>
 	}
 </mat-autocomplete>
