--- a/buildSrc/src/main/resources/website/src/app/app.component.html
+++ b/buildSrc/src/main/resources/website/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-sidenav #sideRoute (closed)="onCloseRoute()">
+<app-sidenav [class]="isDarkTheme() ? 'dark-theme' : ''" #sideRoute (closed)="onCloseRoute()">
 	<app-sidenav #sideDirections (closed)="onCloseDirections()">
 		<app-sidenav #sideStation (closed)="onCloseStation()">
 			<app-sidenav #sideMain>
