--- a/buildSrc/src/main/resources/website/src/app/component/panel/main-panel.component.html
+++ b/buildSrc/src/main/resources/website/src/app/component/panel/main-panel.component.html
@@ -7,6 +7,7 @@
 			}
 		</mat-select>
 	</mat-form-field>
+	<mat-slide-toggle class="grayscale padding-sides" (change)="changeTheme($event.checked)" [checked]="isDarkTheme()">Dark Theme</mat-slide-toggle>
 	<div class="column gap-small content">
 		@for (routeType of routeTypes; track $index) {
 			<div class="row-reverse gap center padding-sides">
