--- a/buildSrc/src/main/resources/website/src/app/component/route-display/route-display.component.css
+++ b/buildSrc/src/main/resources/website/src/app/component/route-display/route-display.component.css
@@ -26,8 +26,7 @@
 }
 
 .circle {
-	background-color: white;
-	border: 2px solid black;
+	border: 2px solid;
 	border-radius: 7px;
 	box-sizing: border-box;
 	left: 26px;
