--- a/buildSrc/src/main/resources/website/src/styles.css
+++ b/buildSrc/src/main/resources/website/src/styles.css
@@ -1,18 +1,23 @@
-@import "@angular/material/prebuilt-themes/azure-blue.css";
-
 * {
-	font-family: "Roboto", sans-serif;
 	margin: 0;
 	padding: 0;
 	user-select: none;
 }
 
 html, body {
-	background-color: var(--mat-app-background-color);
-	color: var(--mat-app-text-color);
+	background: var(--mat-sys-surface);
+	color: var(--mat-sys-on-surface);
 	overflow: hidden;
 	width: 100%;
 	height: 100%;
+}
+
+div {
+	font-family: "Noto Sans", "Noto Serif TC", "Noto Serif SC", "Noto Serif JP", "Noto Serif KR", sans-serif;
+}
+
+.dark-theme {
+	color-scheme: dark;
 }
 
 .grayscale {
