--- a/buildSrc/src/main/resources/website/src/styles.css
+++ b/buildSrc/src/main/resources/website/src/styles.css
@@ -16,6 +16,10 @@ div {
 	font-family: "Noto Sans", "Noto Serif TC", "Noto Serif SC", "Noto Serif JP", "Noto Serif KR", sans-serif;
 }
 
+.light-theme {
+	color-scheme: light;
+}
+
 .dark-theme {
 	color-scheme: dark;
 }
