--- a/buildSrc/src/main/resources/website/src/app/component/panel/main-panel.component.html
+++ b/buildSrc/src/main/resources/website/src/app/component/panel/main-panel.component.html
@@ -25,6 +25,9 @@
 							<mat-button-toggle value="HOLLOW" matTooltip="Hollow">
 								<mat-icon>drag_handle</mat-icon>
 							</mat-button-toggle>
+							<mat-button-toggle value="DASHED" matTooltip="Dashed">
+								<mat-icon>more_horiz</mat-icon>
+							</mat-button-toggle>
 						</mat-button-toggle-group>
 					</div>
 				}
