--- a/buildSrc/src/main/resources/website/src/app/app.component.html
+++ b/buildSrc/src/main/resources/website/src/app/app.component.html
@@ -7,12 +7,12 @@
 					<mat-icon>menu</mat-icon>
 				</button>
 				<div sidenav class="column gap wrapper">
-					<app-search label="Search for anything..." [includeRoutes]="true" [persistSearch]="false" (stationClicked)="onClickStation($event, sideMain, sideStation, sideDirections, sideRoute, true)" (routeClicked)="onClickRoute($event, sideMain, sideStation, sideDirections, sideRoute)"/>
-					<app-main-panel class="wrapper" (directionsOpened)="onOpenDirections(sideMain, sideStation, sideDirections, sideRoute)"/>
+					<app-search class="padding-sides" label="Search for anything..." [includeRoutes]="true" (stationClicked)="onClickStation($event, sideMain, sideStation, sideDirections, sideRoute, true)" (routeClicked)="onClickRoute($event, sideMain, sideStation, sideDirections, sideRoute)"/>
+					<app-main-panel class="wrapper" (directionsOpened)="onOpenDirections(undefined, sideMain, sideStation, sideDirections, sideRoute)"/>
 				</div>
 				<div title>{{ getTitle() }}</div>
 			</app-sidenav>
-			<app-station-panel sidenav (stationClicked)="onClickStation($event, sideMain, sideStation, sideDirections, sideRoute, true)" (routeClicked)="onClickRoute($event, sideMain, sideStation, sideDirections, sideRoute)" (directionsOpened)="sideDirections.open()"/>
+			<app-station-panel sidenav (stationClicked)="onClickStation($event, sideMain, sideStation, sideDirections, sideRoute, true)" (routeClicked)="onClickRoute($event, sideMain, sideStation, sideDirections, sideRoute)" (directionsOpened)="onOpenDirections($event, sideMain, sideStation, sideDirections, sideRoute)"/>
 			<div title>Station Details</div>
 		</app-sidenav>
 		<app-directions sidenav/>
